Оживил интерактивные элементы

--- a/catalog.html
+++ b/catalog.html
@@ -30,7 +30,7 @@
             </li>
             <li>
               <span class="basket-icon icons-header icon-cursor-pointer"></span>
-              <a href="#" class="basket-catalog">Корзина: 10</a>
+              <a href="#" class="basket">Корзина: 0</a>
             </li>
             <li>
               <a href="#" class="checkout">Оформить заказ</a>
@@ -202,11 +202,11 @@
               <li>
                 <a href="catalog-item.html">
                   <img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
-                  <div class="btns-catalog-element">
-                    <button class="buy-btn" type="button" name="buy">Купить</button>
-                    <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
-                  </div>
                 </a>
+                <div class="btns-catalog-element">
+                  <button class="buy-btn" type="button" name="buy">Купить</button>
+                  <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                </div>
                 <h3>
                   <a href="catalog-item.html">
                   <span>Перфоратор BOSCH</span>
@@ -219,11 +219,11 @@
               <li>
                 <a href="catalog-item.html">
                   <img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
-                  <div class="btns-catalog-element">
-                    <button class="buy-btn" type="button" name="buy">Купить</button>
-                    <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
-                  </div>
                 </a>
+                <div class="btns-catalog-element">
+                  <button class="buy-btn" type="button" name="buy">Купить</button>
+                  <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                </div>
                 <h3>
                   <a href="catalog-item.html">
                   <span>Перфоратор BOSCH</span>
@@ -237,11 +237,11 @@
                 <span class="new-catalog-item"></span>
                 <a href="catalog-item.html">
                   <img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
-                  <div class="btns-catalog-element">
-                    <button class="buy-btn" type="button" name="buy">Купить</button>
-                    <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
-                  </div>
                 </a>
+                <div class="btns-catalog-element">
+                  <button class="buy-btn" type="button" name="buy">Купить</button>
+                  <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                </div>
                 <h3>
                   <a href="catalog-item.html">
                   <span>Перфоратор BOSCH</span>
@@ -254,11 +254,11 @@
               <li>
                 <a href="catalog-item.html">
                   <img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
-                  <div class="btns-catalog-element">
-                    <button class="buy-btn" type="button" name="buy">Купить</button>
-                    <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
-                  </div>
                 </a>
+                <div class="btns-catalog-element">
+                  <button class="buy-btn" type="button" name="buy">Купить</button>
+                  <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                </div>
                 <h3>
                   <a href="catalog-item.html">
                   <span>Перфоратор BOSCH</span>
@@ -272,11 +272,11 @@
                 <span class="new-catalog-item"></span>
                 <a href="catalog-item.html">
                   <img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
-                  <div class="btns-catalog-element">
-                    <button class="buy-btn" type="button" name="buy">Купить</button>
-                    <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
-                  </div>
                 </a>
+                <div class="btns-catalog-element">
+                  <button class="buy-btn" type="button" name="buy">Купить</button>
+                  <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                </div>
                 <h3>
                   <a href="catalog-item.html">
                   <span>Перфоратор BOSCH</span>
@@ -289,11 +289,11 @@
               <li>
                 <a href="catalog-item.html">
                   <img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
-                  <div class="btns-catalog-element">
-                    <button class="buy-btn" type="button" name="buy">Купить</button>
-                    <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
-                  </div>
                 </a>
+                <div class="btns-catalog-element">
+                  <button class="buy-btn" type="button" name="buy">Купить</button>
+                  <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                </div>
                 <h3>
                   <a href="catalog-item.html">
                   <span>Перфоратор BOSCH</span>
@@ -307,11 +307,11 @@
                 <span class="new-catalog-item"></span>
                 <a href="catalog-item.html">
                   <img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
-                  <div class="btns-catalog-element">
-                    <button class="buy-btn" type="button" name="buy">Купить</button>
-                    <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
-                  </div>
                 </a>
+                <div class="btns-catalog-element">
+                  <button class="buy-btn" type="button" name="buy">Купить</button>
+                  <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                </div>
                 <h3>
                   <a href="catalog-item.html">
                   <span>Перфоратор BOSCH</span>
@@ -324,11 +324,11 @@
               <li>
                 <a href="catalog-item.html">
                   <img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
-                  <div class="btns-catalog-element">
-                    <button class="buy-btn" type="button" name="buy">Купить</button>
-                    <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
-                  </div>
                 </a>
+                <div class="btns-catalog-element">
+                  <button class="buy-btn" type="button" name="buy">Купить</button>
+                  <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                </div>
                 <h3>
                   <a href="catalog-item.html">
                   <span>Перфоратор BOSCH</span>
@@ -341,11 +341,11 @@
               <li>
                 <a href="catalog-item.html">
                   <img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
-                  <div class="btns-catalog-element">
-                    <button class="buy-btn" type="button" name="buy">Купить</button>
-                    <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
-                  </div>
                 </a>
+                <div class="btns-catalog-element">
+                  <button class="buy-btn" type="button" name="buy">Купить</button>
+                  <button class="to-fav-btn" type="button" name="to-favorite">В закладки</button>
+                </div>
                 <h3>
                   <a href="catalog-item.html">
                   <span>Перфоратор BOSCH</span>
@@ -359,7 +359,7 @@
           </section>
         </div>
           <ul class="pages mp-null">
-            <li><a href="#">1</a></li>
+            <li class="active"><a href="#">1</a></li>
             <li><a href="#">2</a></li>
             <li><a href="#">3</a></li>
             <li><a href="#" class="next-page">Следующая</a></li>
@@ -433,5 +433,7 @@
         <button type="button">Продолжить покупки</button>
       </div>
     </section>
+    <script src="js/cart.js"></script>
+    <script src="js/favorites_basket.js"></script>
   </body>
 </html>
