--- a/catalog.html
+++ b/catalog.html
@@ -63,9 +63,9 @@
         <h2 class="visually-hidden">Данные пользователя</h2>
         <ul class="user">
           <li class="username-block">
-            <a href="login.html"><span class="icon-user icon-cursor-pointer"></span></a>
+            <a href="profile.html"><span class="icon-user icon-cursor-pointer"></span></a>
             <a href="logout.html"><span class="icon-logout icon-cursor-pointer"></span></a>
-            <a href="login.html" class="username">Равшан Джамшутович</a>
+            <a href="profile.html" class="username">Равшан Джамшутович</a>
           </li>
           <div class="orders-lc">
             <li><a href="#" class="user-orders">Мои заказы</a></li>
