--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
-    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i|PT+Sans:400,400i,700,700i&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i&display=swap&subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap&subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -20,7 +21,7 @@
             <li>
           <form class="" action="https://echo.htmlacademy.ru" method="get">
             <label for="search" class="visually-hidden">Поиск:</label>
-            <input id="search" type="search" name="search" value="" placeholder="Поиск:">
+            <input class="search-input" id="search" type="search" name="search" value="" placeholder="Поиск:">
             <span class="icon-search icons-header icon-cursor-search"></span>
           </form>
             </li>
@@ -60,8 +61,13 @@
               <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             </section>
           <ul class="user-panel">
-            <li class="sign-in"><button type="button" name="sign-in">Войти</button><span class="icon-login icon-cursor-pointer"></span></li>
-            <li><button type="button" name="sign-up">Регистрация</button></li>
+            <li class="sign-in">
+              <button type="button" name="sign-in">Войти</button>
+              <span class="icon-login icon-cursor-pointer"></span>
+            </li>
+            <li>
+              <button type="button" name="sign-up">Регистрация</button>
+            </li>
           </ul>
           </div>
           <div class="header-nav-div">
@@ -316,10 +322,10 @@
               строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
             <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
               Техномарт работает со многими транспортными компаниями:</p>
-            <ul>
-              <li>Деловые линии</li> <br>
-              <li>Автотрейдинг</li> <br>
-              <li>ЖелДорЭкспедиция</li> <br>
+            <ul class="mp-null">
+              <li>Деловые линии</li>
+              <li>Автотрейдинг</li>
+              <li>ЖелДорЭкспедиция</li>
             </ul>
             <a href="#">Подробнее о компании</a>
           </section>
@@ -336,36 +342,38 @@
     <footer class="cuprum-family">
       <div class="first-footer-background">
         <section class="container first-footer-section">
-        <div class="first-footer">
-          <div class="logo-footer">
-            <a href="index.html">
-            <img src="img/logo.svg" width="138" height="23" alt="Логотип интернет-магазина «Техномарт»">
-            </a>
+          <h2 class="visually-hidden">Навигация по сайту</h2>
+          <div class="first-footer">
+            <div class="logo-footer">
+              <a href="index.html">
+              <img src="img/logo.svg" width="138" height="23" alt="Логотип интернет-магазина «Техномарт»">
+              </a>
+            </div>
+            <div class="site-navigation">
+              <ul>
+                <li><a href="#">Компания</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="#">Доставка</a></li>
+                <li><a href="#">Контакты</a></li>
+              </ul>
+            </div>
           </div>
-          <div class="site-navigation">
+          <nav class="catalog-navigation">
+            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
+            +7 (812) 555-05-55</p>
             <ul>
-              <li><a href="#">Компания</a></li>
-              <li><a href="#">Новости</a></li>
-              <li><a href="catalog.html">Каталог</a></li>
-              <li><a href="#">Доставка</a></li>
-              <li><a href="#">Контакты</a></li>
+              <li><a href="#">Материалы</a></li>
+              <li><a href="#">Техника</a></li>
+              <li><a href="#">Инструмент</a></li>
+              <li><a href="#">Спецпредложения</a></li>
             </ul>
-          </div>
-        </div>
-        <nav class="catalog-navigation">
-          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
-          +7 (812) 555-05-55</p>
-          <ul>
-            <li><a href="#">Материалы</a></li>
-            <li><a href="#">Техника</a></li>
-            <li><a href="#">Инструмент</a></li>
-            <li><a href="#">Спецпредложения</a></li>
-          </ul>
-        </nav>
+          </nav>
         </section>
       </div>
       <div class="second-footer-background">
         <section class="container second-footer">
+          <h2 class="visually-hidden">Правовая информация</h2>
           <div class="copyright">
             <p>© 2010–2019 Компания «Техномарт» <br>
               Все права защищены</p>
@@ -404,7 +412,7 @@
     <section class="map-popup">
       <h2 class="visually-hidden">Как до нас добраться</h2>
       <button class="popup-close-btn" type="button"></button>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003404!2d30.3208587164867!3d59.93871916905368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1570129931014!5m2!1sru!2sru" width="940" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003404!2d30.3208587164867!3d59.93871916905368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1570129931014!5m2!1sru!2sru" width="940" height="450" style="border:0;" allowfullscreen=""></iframe>
     </section>
     <section class="added-to-cart-popup">
       <button class="popup-close-btn" type="button"></button>
