--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   c0.154,0.671,0.505,1.643,0.408,2.289C6.797,6.217,5.458,6.644,5.066,7.376c1.307,3.135,3.443,5.439,6.293,7.031
                   c0.715-0.392,1.346-1.572,2.332-1.595c0.359-0.009,0.818,0.178,1.184,0.286c0.402,0.121,0.75,0.275,1.104,0.408
                   c0.596,0.224,1.648,0.521,2.004,1.021c0.365,0.513,0.57,1.356,0.49,1.879C18.309,17.447,16.594,18.603,15.572,18.985z"/></g></g></svg>
-                <span>+7 (812) 555-05-55</span>
+                <a href="tel:+78125550555">+7 (812) 555-05-55</a>
               <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             </section>
           <ul class="user-panel">
